# team-vault

./: .gitignore  .gitignore.swp  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 18b18c2fd354_create_users_table.py  36c8c58e4ac6_add_workspaces.py  3d36c861391e_update_users_table.py  5906b228ea9a_add_pages.py  84af370ca3e4_extend_user_auth_fields.py  a932fa5cac6d_add_audit_logs.py  b475e013d3a1_add_refresh_tokens1.py  f4dcfc907a9e_add_attachments.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/api/: dependencies.py
backend/app/api/routes/: attachments.py  audit_logs.py  auth.py  pages.py  workspaces.py
backend/app/core/: audit_actions.py  config.py  exceptions.py  rate_limits.py  security.py  slug.py  tokens.py
backend/app/db/: models.py
backend/app/models/: attachment.py  audit_log.py  page.py  page_version.py  refresh_token.py  user.py  workspace.py  workspace_member.py
backend/app/repositories/: attachment.py  audit_log.py  page.py  page_version.py  refresh_token.py  user.py  workspace.py  workspace_member.py
backend/app/schemas/: attachment.py  audit_log.py  auth.py  error.py  page.py  pagination.py  user.py  workspace.py
backend/app/services/: email.py  google_auth.py  pages.py  rate_limit.py  storage.py  workspace_permissions.py
backend/app/workers/: celery_app.py  cleanup_tasks.py  db.py  email_tasks.py
frontend/: AUTH_SETUP.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  index.html  package.json  (+2 more)
(+58 files in other folders)
