[project]
name = "teamvault-backend"
version = "0.1.0"
description = "TeamVault backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88